--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "@dhiwise/component-tagger": "^1.0.10",
     "@tailwindcss/typography": "^0.5.16",
+    "framer-motion": "^12.23.12",
     "keen-slider": "^6.8.6",
     "next": "14.2.0",
     "react": "18.2.0",
