--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "next": "14.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.16.0",
     "recharts": "^2.15.2",
     "swiper": "^11.2.10"
   },
