--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "framer-motion": "^12.23.12",
     "keen-slider": "^6.8.6",
+    "lucide-react": "^0.542.0",
     "next": "14.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
