--- a/package.json
+++ b/package.json
@@ -49,12 +49,13 @@
   "dependencies": {
     "@dhiwise/component-tagger": "^1.0.10",
     "@emailjs/browser": "^4.4.1",
+    "@next/third-parties": "^15.5.4",
     "@tailwindcss/typography": "^0.5.16",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.12",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.542.0",
-    "next": "14.2.0",
+    "next": "^15.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.16.0",
