--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "next": "^15.5.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-intersection-observer": "^9.16.0",
     "recharts": "^2.15.2",
     "swiper": "^11.2.10"
